# learningFastMcp

./: .env  README.md  main.py  pyproject.toml
data/: categories.json
