[project]
name = "learningfastmcp"
version = "0.1.0"
description = "Learning project for MCP and FastMCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.1",
]

[project.scripts]
start = "fastmcp run main.py"
inspect = "fastmcp dev inspector main.py"

[tool.uv]
managed = true
